--- a/ITP2021_S1_01_G3-main/server/package.json
+++ b/ITP2021_S1_01_G3-main/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +25,7 @@
     "nodemon": "^2.0.7",
     "shortid": "^2.2.15",
     "slugify": "^1.4.5"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
