--- a/ITP2021_S1_01_G3-main/client/package.json
+++ b/ITP2021_S1_01_G3-main/client/package.json
@@ -14,14 +14,17 @@
     "react-bootstrap": "^1.5.2",
     "react-checkbox-tree": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-form-input-validation": "^2.0.5",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "simple-react-validator": "^1.6.0",
     "web-vitals": "^0.2.4"
   },
   "proxy": "http://localhost:5000",
