--- a/ITP2021_S1_01_G3-main/client/package.json
+++ b/ITP2021_S1_01_G3-main/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "form-data": "^4.0.0",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "react": "^17.0.2",
