--- a/ITP2021_S1_01_G3-main/client/package.json
+++ b/ITP2021_S1_01_G3-main/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^1.5.2",
     "react-checkbox-tree": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-form-input-validation": "^2.0.5",
     "react-icons": "^3.11.0",
     "react-redux": "^7.2.1",
     "react-responsive-carousel": "^3.2.18",
